# azure_fast_transcript

./: .gitignore  README.md  pyproject.toml
src/azure_fast_transcript/: __init__.py  __main__.py  app.py
