[project]
name = "azure_fast_transcript"
version = "0.1.1"
description = "Transcript tool using Azure Speech Services fast transcript preview API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "click>=8.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
transcribe = "azure_fast_transcript:app.app"